fixed overflow bug when second line gets too long in the tasks

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -166,6 +166,7 @@ body {
   font-family: 'Merienda', cursive;
   font-size: 2.2rem;
   color: var(--color-primary-dark);
+  overflow: auto;
   word-wrap: break-word;
   overflow-wrap: break-word;
   white-space: normal;
@@ -175,6 +176,8 @@ body {
 .u-strikethrough {
   opacity: 0.2;
   position: relative;
+  text-decoration-color: currentColor !important;
+  text-decoration: line-through;
   /*   &::after {
     content: '';
     position: absolute;
@@ -195,9 +198,6 @@ body {
     width: 0; }
   100% {
     width: 100%; } }
-  .u-strikethrough::first-line {
-    text-decoration-color: currentColor !important;
-    text-decoration: line-through; }
 
 .dashboard {
   width: 75vw;
@@ -280,14 +280,6 @@ body {
     border-bottom: 1px solid var(--color-primary-light);
     border-radius: 5px;
     padding: 0.5rem 0.75rem 0.5rem 0.75rem;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    white-space: nowrap;
-    word-wrap: break-word;
-    outline: 0;
-    border: none;
-    text-decoration-color: transparent !important;
     transition: all 0.25s; }
     .task__input:empty::before {
       content: '\200b'; }
