--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -124,18 +124,6 @@
     border-radius: 5px;
     padding: 0.5rem 0.75rem 0.5rem 0.75rem;
 
-    width: 100%;
-    height: 100%;
-
-    overflow: hidden;
-    white-space: nowrap;
-    word-wrap: break-word;
-
-    outline: 0;
-    border: none;
-
-    text-decoration-color: transparent !important;
-
     &:empty::before {
       content: '\200b';
     }
